🤖 Integrate Groq AI for faster, cost-effective AI features
- Replace OpenAI with Groq SDK in Discord bot and web dashboard
- Update package.json dependencies to use groq-sdk
- Create Groq service for web dashboard with AI chat and study plan APIs
- Update environment configuration files for Groq API key
- Update documentation to reflect Groq integration
- Use Llama3-8b-8192 model for optimal performance and cost

--- a/web-dashboard/package.json
+++ b/web-dashboard/package.json
@@ -29,7 +29,8 @@
     "prisma": "^5.7.1",
     "@prisma/client": "^5.7.1",
     "next-auth": "^4.24.5",
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "groq-sdk": "^0.7.0"
   },
   "devDependencies": {
     "eslint": "^8",
