--- a/discord-bot/env.example
+++ b/discord-bot/env.example
@@ -3,8 +3,8 @@ DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CLIENT_ID=your_discord_client_id_here
 DISCORD_GUILD_ID=your_test_server_id_here
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# Groq AI Configuration
+GROQ_API_KEY=your_groq_api_key_here
 
 # Database Configuration
 DATABASE_URL=sqlite:./lunchbox.db
