--- a/discord-bot/package.json
+++ b/discord-bot/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.14.1",
-    "openai": "^4.20.1",
+    "groq-sdk": "^0.7.0",
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.6",
